# DevHost

./: .gitmodules  CMakeLists.txt  LICENSE
sources/: AppConfig.h  Application.cpp  Application.h  LookAndFeel.cpp  LookAndFeel.h  MainWindow.cpp  MainWindow.h  PluginSlot.cpp  PluginSlot.h
